trunk/Archive2/a7/264aefe9b1a231/main.cpp
#include <cstddef>

template <typename T> class container {
public:
    class iterator {
        static const std::size_t foo = sizeof(T);
    };
};


template <template <class> class Container, class T>
struct Triple {
  T value;
  typename Container<Triple>::iterator prev, next;
};

Triple<container, int> t;
